Download link on front-page no longer causes overflow.

--- a/sites/all/themes/pfo/css/sass/front.scss
+++ b/sites/all/themes/pfo/css/sass/front.scss
@@ -68,7 +68,6 @@
 /* -- Download section -- */
 
 .download h2 {
-  width: 60%;
   margin-bottom: .6em;
   padding-bottom: .2em;
   overflow: visible;
