--- a/sites/all/themes/pfo/css/stylesheets/style.css
+++ b/sites/all/themes/pfo/css/stylesheets/style.css
@@ -368,7 +368,6 @@ footer {
 
 /* -- Download section -- */
 .download h2 {
-  width: 60%;
   margin-bottom: .6em;
   padding-bottom: .2em;
   overflow: visible;
